fix(files): replace commons-io with Java NIO to fix disconnect save crash